--- a/public/assets/css/burger-style.css
+++ b/public/assets/css/burger-style.css
@@ -1,20 +1,42 @@
-li {
-    padding: 5px;
-    margin: 5px;
-    background: #faebd7;
-  }
-  
-  .label {
-    font-weight: bold;
-  }
-  
-  .create-update-form {
-    padding: 5px;
-    margin: 5px;
-    background: aqua;
-  }
-  
-  .form-group {
-    margin-bottom: 5px;
-  }
-  
+.body {
+	background-color: red;
+	margin: 0px;
+	padding: 0px;
+}
+
+.title {
+	color: white;
+}
+
+.uneaten {
+	background-color: #e3e3e3;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #c4c3c3;
+	margin: 2px 0px 2px 0px;
+	padding: 1px;
+}
+
+.eaten {
+	background-color: #868585;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #c4c3c3;
+	margin: 2px 0px 2px 0px;
+	padding: 1px;
+	color: #c4c3c3;
+}
+
+.class{
+  float: left;
+
+}
+
+#submit{
+  float: right;
+}
+
+.burger_field {
+	width: 250px;
+	height: 50px;
+}
