trying to fix deploy

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -40,7 +40,7 @@
               <form action="/{{this.id}}" method="POST">
                 <input type="text" id="ca" name="customer" class="float">
                 <input type="hidden" name="devoured" value="true">
-                <button type="submit" class="center-block" id="submit">Devour It!</button>
+                <button type="submit" class="center-block" id="submit">MMM Yummy!</button>
               </form>
             </div>
           </div>
